@@ -1,3 +1,7 @@
+2016-04-28 Magnus Hagdorn
+ * piccolo2/client/PiccoloXbeeClient.py: move xbee communication into a separate
+   thread
+
 2016-04-27 Magnus Hagdorn
  * piccolo-client.py: add logging
  * piccolo2/client/PiccoloXbeeClient.py: use new block read/write xbee methods
